feat(security, exceptions): enhance error handling and implement flashcard-specific exceptions
- Added a custom `ResourceNotFoundException` for better error granularity.
- Updated `SecurityConfig` to include custom unauthorized error response using `ErrorResponse`.
- Integrated `ResourceNotFoundException` handling in `GlobalExceptionHandler`.
- Modified `ReviewSessionServiceImpl` to throw `ResourceNotFoundException` when no flashcards are available for review.
- Updated and added comprehensive tests for `ReviewSessionServiceImpl`, `GenerationController`, and related classes.
- Started foundational work on `FlashcardControllerTest` for Flashcard functional testing.
- Enhanced POM with Testcontainers dependencies for future integration tests.